<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="?colorPrimary">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/spacing_1x"
                android:background="@android:color/white"
                app:cardElevation="@dimen/default_elevation">

            <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:paddingLeft="@dimen/spacing_2x"
                    android:drawablePadding="@dimen/spacing_2x"
                    android:drawableLeft="@drawable/ic_search"
                    android:hint="@string/search_repositories"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/material_grey_400"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_medium"
                    android:imeOptions="actionSearch"
                    android:inputType="text"/>

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_1x"
            android:background="@color/background_grey"
            android:gravity="center_vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/roboto_medium"
                android:textAllCaps="true"
                android:text="@string/sort_by"
                android:textSize="@dimen/text_size_medium"/>

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/repositories_loader_size"
                    android:layout_height="@dimen/repositories_loader_size"
                    android:layout_marginRight="@dimen/spacing_1x"
                    android:layout_gravity="end"
                    android:visibility="invisible"
                    android:indeterminate="true"
                    tools:visibility="visible"/>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_grey">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <markusi.githubapp.ui.shared.EmptyPlaceholderView
                android:id="@+id/emptyPlaceholderView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_empty_placeholder"
                app:initialText="@string/enter_text"
                app:noSearchResultsText="@string/no_found_repositories"/>

    </FrameLayout>

</LinearLayout>